# ED_GII_UGR

./: .gitignore  README.md
ejercicios/001_ejercicios_TDA_lineales/ejercicios_para_practicar/: 01-add_elements.cpp  02-suaviza_lista.cpp  03-compacta.cpp
ejercicios/001_ejercicios_TDA_lineales/ejercicios_resueltos/: 01-dividir_lista.cpp  02-agrupar_elemento.cpp  03-duplicar.cpp  04-subsequencia.cpp  05-construye_lista.cpp  06-multi-interseccion.cpp  07-repetidos.cpp  08-orden.cpp  09-secuencia.cpp  10-agrupar_iguales.cpp
ejercicios/002_ejercicios_TDA_no_lineales/ejercicios_para_practicar/: 01-separa.cpp  02-flat.cpp  03-conjunto_potencia.cpp  04-diferencia_simetrica  04-diferencia_simetrica.cpp
ejercicios/002_ejercicios_TDA_no_lineales/ejercicios_resueltos/: 01-esta_en_conjunto.cpp  02-subconjunto_propio.cpp  03-contiene_parejas.cpp  04-corta_map.cpp  05-contar.cpp  06-en_todos.cpp  07-mas_conectado.cpp  08-solo_en_dos.cpp  09-union.cpp  10-tiene_suma_constante.cpp
ejercicios/examenes_parciales/: examen_listasc1.cpp  examen_listasc2.cpp  examen_listasc3.cpp  examen_listasd2.cpp  examen_setmapA2.cpp  examen_setmapa1.cpp  examen_setmapc1.cpp  examen_setmapc3.cpp
notas/: arboles-abb.md  arboles-apo.md  arboles-avl.md  arboles.md  clases_template.md  stl_no_lineales.md  tablas-hash.md
practicas/practica_03/: CMakeLists.txt
practicas/practica_03/doc/: mainpage.dox
practicas/practica_03/include/: maxqueue.h  maxstack.h
practicas/practica_03/src/: cola_max.cpp  maxqueue.cpp  maxstack.cpp  pila_max.cpp
practicas/practica_final/: CMakeLists.txt  Doxyfile.in
practicas/practica_final/doc/: mainpage.dox
practicas/practica_final/include/: bolsa_letras.h  cifras.h  conjunto_letras.h  diccionario.h  letra.h
practicas/practica_final/src/: bolsa_letras.cpp  cifras.cpp  conjunto_letras.cpp  diccionario.cpp  letra.cpp  test_cantidad_letras.cpp  test_cifras.cpp  test_diccionario.cpp  test_letras.cpp
retos/reto_1_sudoku/: KillerSudoku.h  entrega.md  example_sudoku.txt
retos/reto_2_pila_doble/: entrega.md
retos/reto_2_pila_doble/ejercicio_1/: pila_doble_pi.h  pila_doble_pi.hxx
retos/reto_2_pila_doble/ejercicio_2/: vector_pilas.h
retos/reto_3_bintree/: entrega.md  levelorder.cpp
